# chatui-nicegui

./: .gitignore  LICENSE  main.py  pyproject.toml
backend/: main.py
react-ui/: package-lock.json  package.json
react-ui/src/: App.jsx
react-ui/src/components/: ChatInput.jsx  MessageItem.jsx  MessageList.jsx  SelectDatabaseButton.jsx
ui/: main.py
